fix(button): wrong font family

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -18,3 +18,7 @@ img {
   background-size: cover;
   shape-margin: 0.75rem;
 }
+
+button {
+  font-family: inherit;
+}
